--- a/climacoder/writing.html
+++ b/climacoder/writing.html
@@ -464,14 +464,14 @@
                     <div class="dropdown-submenu">
                         <a href="#">Writing</a>
                         <div class="dropdown-submenu-content">
-                            <a href="/climacoder/writing.html#belize">Belize</a>
-                            <a href="/climacoder/writing.html#guatemala">Guatemala</a>
-                            <a href="/climacoder/writing.html#honduras">Honduras</a>
-                            <a href="/climacoder/writing.html#el-salvador">El Salvador</a>
-                            <a href="/climacoder/writing.html#nicaragua">Nicaragua</a>
-                            <a href="/climacoder/writing.html#costa-rica">Costa Rica</a>
-                            <a href="/climacoder/writing.html#panama">Panama</a>
-                            <a href="/climacoder/writing.html#mexico">Mexico</a>
+                            <a href="/climacoder/writing/belize.html">Belize</a>
+                            <a href="/climacoder/writing/guatemala.html">Guatemala</a>
+                            <a href="/climacoder/writing/honduras.html">Honduras</a>
+                            <a href="/climacoder/writing/el-salvador.html">El Salvador</a>
+                            <a href="/climacoder/writing/nicaragua.html">Nicaragua</a>
+                            <a href="/climacoder/writing/costa-rica.html">Costa Rica</a>
+                            <a href="/climacoder/writing/panama.html">Panama</a>
+                            <a href="/climacoder/writing/mexico.html">Mexico</a>
                         </div>
                     </div>
                 </div>
@@ -500,7 +500,7 @@
 
         <div class="country-grid">
             <div class="country-card">
-                <h3><a href="#belize">Belize</a></h3>
+                <h3><a href="/climacoder/writing/belize.html">Belize</a></h3>
                 <p>
                     High extreme heat hazard with significant impacts on health, agriculture, and
                     outdoor workers. Recent forest fires and Red Cross interventions highlight acute risks.
@@ -508,7 +508,7 @@
             </div>
 
             <div class="country-card">
-                <h3><a href="#guatemala">Guatemala</a></h3>
+                <h3><a href="/climacoder/writing/guatemala.html">Guatemala</a></h3>
                 <p>
                     Highest heat risk in Central America. Experienced 622% increase in dengue cases
                     between 2023-2024 linked to heat waves and drought.
@@ -516,7 +516,7 @@
             </div>
 
             <div class="country-card">
-                <h3><a href="#honduras">Honduras</a></h3>
+                <h3><a href="/climacoder/writing/honduras.html">Honduras</a></h3>
                 <p>
                     High extreme heat hazard with 580% increase in dengue cases in 2024. Widespread
                     outdoor work and limited health services amplify vulnerability.
@@ -524,7 +524,7 @@
             </div>
 
             <div class="country-card">
-                <h3><a href="#el-salvador">El Salvador</a></h3>
+                <h3><a href="/climacoder/writing/el-salvador.html">El Salvador</a></h3>
                 <p>
                     Among highest heat risk countries in the region. High urbanization and inadequate
                     infrastructure increase heat-related illness susceptibility.
@@ -532,7 +532,7 @@
             </div>
 
             <div class="country-card">
-                <h3><a href="#nicaragua">Nicaragua</a></h3>
+                <h3><a href="/climacoder/writing/nicaragua.html">Nicaragua</a></h3>
                 <p>
                     Limited hazard data available, but shares regional vulnerabilities: poor housing,
                     lack of potable water, and high poverty increase heat exposure.
@@ -540,7 +540,7 @@
             </div>
 
             <div class="country-card">
-                <h3><a href="#costa-rica">Costa Rica</a></h3>
+                <h3><a href="/climacoder/writing/costa-rica.html">Costa Rica</a></h3>
                 <p>
                     Lower vulnerability than neighboring countries due to stronger institutions, but
                     rising temperatures still pose risks to outdoor workers and urban residents.
@@ -548,7 +548,7 @@
             </div>
 
             <div class="country-card">
-                <h3><a href="#panama">Panama</a></h3>
+                <h3><a href="/climacoder/writing/panama.html">Panama</a></h3>
                 <p>
                     Increasingly hot summers affecting construction, tourism, and logistics workers.
                     Critical need for cooling and hydration access in urban coastal centers.
@@ -556,7 +556,7 @@
             </div>
 
             <div class="country-card">
-                <h3><a href="#mexico">Mexico</a></h3>
+                <h3><a href="/climacoder/writing/mexico.html">Mexico</a></h3>
                 <p>
                     Multiyear drought since 2022 affecting 76% of country by 2024. Heat waves intensified
                     by water scarcity, particularly impacting central and southern regions.
@@ -564,105 +564,11 @@
             </div>
         </div>
 
-        <h2 style="margin-top: 4rem; margin-bottom: 2rem;">Country Analyses</h2>
-
-        <section id="belize">
-            <h3>Belize</h3>
-            <p>
-                The ThinkHazard database classifies Belize's extreme heat hazard as high,
-                meaning prolonged exposure to dangerous temperatures is expected at least
-                once in the next five years. Heat affects a
-                variety of sectors—including health, energy, transport and agriculture—and
-                disproportionately impacts urban populations and outdoor workers.
-                In 2024 temperatures above 100 °F triggered forest fires, prompting the
-                Belize Red Cross to provide hygiene kits and cash assistance.
+        <div class="instructions">
+            <p style="margin: 0; text-align: center;">
+                <strong>More analyses and blog posts coming soon.</strong> Check back for updates on heat stress research across the region.
             </p>
-        </section>
-
-        <section id="guatemala">
-            <h3>Guatemala</h3>
-            <p>
-                Guatemala is one of the Central American countries with the highest risk of
-                heat-related impacts. Heat waves and drought have
-                contributed to a 622% increase in dengue cases between early 2023 and
-                early 2024. The extreme heat hazard is classified as
-                high, and vulnerability is amplified by rapid
-                urbanisation, limited infrastructure and high poverty.
-                Protecting children, older adults and outdoor workers is therefore a
-                national priority.
-            </p>
-        </section>
-
-        <section id="honduras">
-            <h3>Honduras</h3>
-            <p>
-                Like Guatemala, Honduras faces a high extreme heat hazard.
-                The country recorded a 580% increase in dengue cases in early 2024 compared
-                with the previous year due to a combination of heat and drought.
-                High poverty, limited access to water and health services, and widespread
-                outdoor work make the population particularly vulnerable.
-            </p>
-        </section>
-
-        <section id="el-salvador">
-            <h3>El Salvador</h3>
-            <p>
-                El Salvador is listed alongside Guatemala as having the highest heat risk in
-                Central America. Although detailed statistics are
-                scarce, the country shares many of the same vulnerabilities: high
-                urbanisation, inadequate infrastructure and limited health care capacity
-                increase susceptibility to heat-related illness.
-            </p>
-        </section>
-
-        <section id="nicaragua">
-            <h3>Nicaragua</h3>
-            <p>
-                Nicaragua does not have a publicly available hazard classification but
-                experiences the same regional challenges: poor housing, lack of potable
-                water and high poverty leave many communities exposed to extreme heat and
-                humidity. Evidence on heat-related health impacts
-                remains limited, yet studies suggest that heat waves can exacerbate
-                dehydration, heat stroke and other illnesses.
-            </p>
-        </section>
-
-        <section id="costa-rica">
-            <h3>Costa Rica</h3>
-            <p>
-                Costa Rica is generally considered less vulnerable due to stronger
-                institutions, but rising temperatures and humidity still pose risks to
-                outdoor workers and urban residents. As in the rest of the region,
-                vulnerable groups include children, pregnant women and older adults.
-                More research is needed to quantify how climate change will affect
-                heat-related illnesses in the coming decades.
-            </p>
-        </section>
-
-        <section id="panama">
-            <h3>Panama</h3>
-            <p>
-                Limited hazard data exist for Panama, but the country is experiencing
-                increasingly hot summers and humidity. With large urban centres on both
-                coasts and a booming service economy, heat exposure will impact workers in
-                construction, tourism and logistics. Ensuring access to cooling and
-                hydration for vulnerable populations will be critical.
-            </p>
-        </section>
-
-        <section id="mexico">
-            <h3>Mexico</h3>
-            <p>
-                Mexico has been hit by a multiyear drought since the winter of
-                2022–2023. By May 2024 nearly 76% of the country was experiencing drought,
-                making it the most widespread drought since 2011.
-                The drought has intensified heat waves, causing water scarcity and
-                agricultural losses; central and southern Mexico—home to major
-                population centres—have been particularly affected.
-                Vulnerable populations include outdoor workers, farmers and those without
-                air conditioning or access to reliable water sources.
-            </p>
-        </section>
+        </div>
     </main>
 
     <footer>
