--- a/research/publications.html
+++ b/research/publications.html
@@ -549,7 +549,7 @@
             </div>
 
             <div class="publication-card">
-                <h3>WeLL (Women Envisioning Livable Lives) Guest Lecture</h3>
+                <h3>Center for the Built Environment Guest Lecture</h3>
                 <div class="publication-meta">
                     2024
                 </div>
