--- a/research/heatindex.html
+++ b/research/heatindex.html
@@ -338,17 +338,17 @@
                             <a href="/climacoder/countries/mexico.html">Mexico</a>
                         </div>
                     </div>
-                    <div class="dropdown-submenu">
+                                        <div class="dropdown-submenu">
                         <a href="#">Writing</a>
                         <div class="dropdown-submenu-content">
-                            <a href="/climacoder/writing.html#belize">Belize</a>
-                            <a href="/climacoder/writing.html#guatemala">Guatemala</a>
-                            <a href="/climacoder/writing.html#honduras">Honduras</a>
-                            <a href="/climacoder/writing.html#el-salvador">El Salvador</a>
-                            <a href="/climacoder/writing.html#nicaragua">Nicaragua</a>
-                            <a href="/climacoder/writing.html#costa-rica">Costa Rica</a>
-                            <a href="/climacoder/writing.html#panama">Panama</a>
-                            <a href="/climacoder/writing.html#mexico">Mexico</a>
+                            <a href="/climacoder/writing/belize.html">Belize</a>
+                            <a href="/climacoder/writing/guatemala.html">Guatemala</a>
+                            <a href="/climacoder/writing/honduras.html">Honduras</a>
+                            <a href="/climacoder/writing/el-salvador.html">El Salvador</a>
+                            <a href="/climacoder/writing/nicaragua.html">Nicaragua</a>
+                            <a href="/climacoder/writing/costa-rica.html">Costa Rica</a>
+                            <a href="/climacoder/writing/panama.html">Panama</a>
+                            <a href="/climacoder/writing/mexico.html">Mexico</a>
                         </div>
                     </div>
                 </div>
