--- a/climacoder.html
+++ b/climacoder.html
@@ -459,6 +459,11 @@
         </nav>
     </header>
 
+    <!-- Red pattern accent divider -->
+    <div style="width:100%;height:100px;background:url('/assets/images/backgrounds/red.jpg') center/cover no-repeat;position:relative;overflow:hidden">
+        <div style="position:absolute;inset:0;background:linear-gradient(to right,rgba(250,250,250,0.5) 0%,rgba(250,250,250,0) 40%,rgba(250,250,250,0) 60%,rgba(250,250,250,0.5) 100%)"></div>
+    </div>
+
     <main>
         <h2>ClimaCoder</h2>
 
