--- a/index.html
+++ b/index.html
@@ -431,6 +431,11 @@
         </nav>
     </header>
 
+    <!-- Hero banner with orange pattern -->
+    <div style="width:100%;height:220px;background:url('/assets/images/backgrounds/orange.jpg') center/cover no-repeat;position:relative;overflow:hidden">
+        <div style="position:absolute;inset:0;background:linear-gradient(to bottom,rgba(250,250,250,0) 0%,rgba(250,250,250,1) 100%)"></div>
+    </div>
+
     <main>
         <div class="main-container">
             <div class="profile-section">
